Mobile height change to make it fit on iphone and fix space, and remove pink from submit button causing issueson mobile

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -93,7 +93,7 @@
   margin: 1rem;
 }
 .submit-btn:hover{
-  background-color: var(--highlight);
+  /* background-color: var(--highlight); */
 }
 
 .download-img {
