--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -142,10 +142,10 @@
 
 @media screen and (max-width: 505px) {
   #intro{
-    height:100vh;
+    height: auto;
   }
   .intro-content{
-    margin-top:-1rem;
+    height:100%;
   }
   .hello {
     font-size:large;
